--- a/project/client/src/app/pages/customers/index.html
+++ b/project/client/src/app/pages/customers/index.html
@@ -63,10 +63,16 @@
         </td>
 
         <td>
+
           <button type="button" ng-click="vm.edit(item)"
                   class="btn-sm btn-primary btn-with-icon">
             <i class="fa fa-edit"></i>
             修改
+          </button>
+          <button type="button" ng-click="vm.study(item)"
+                  class="btn-sm btn-info btn-with-icon">
+            <i class="fa fa-edit"></i>
+            学习
           </button>
           <button type="button" ng-click="vm.destroy(item)"
                   class="btn-sm btn-danger btn-with-icon">
