--- a/project/client/src/app/pages/customers/study.html
+++ b/project/client/src/app/pages/customers/study.html
@@ -5,121 +5,144 @@
              ba-panel
              ba-panel-title="基础信息"
              ba-panel-class="with-scroll">
-            <div class="col-md-2">
-                <div class="input-group">
-                    <span class="input-group-addon">姓名</span>
-                    <input class="form-control">
+
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="input-group">
+                        <span class="input-group-addon">姓名</span>
+                        <input class="form-control"  ng-model="vm.customer.name">
+                    </div>
+                </div>
+
+                <div class="col-md-2">
+                    <div class="form-group">
+                        <ui-select ng-model="vm.selectedGender"
+                                   class="btn-group bootstrap-select form-control"
+                        >
+                            <ui-select-match  placeholder="性别">
+                                <span> {{$select.selected.title}}</span>
+                            </ui-select-match>
+                            <ui-select-choices
+                                    repeat="item in vm.genderList"
+                            >
+                                <span ng-bind-html="item.title"></span>
+                            </ui-select-choices>
+                        </ui-select>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="input-group">
+                        <span class="input-group-addon">八字</span>
+                        <input class="form-control"  ng-model="vm.customer.bazi">
+                    </div>
+                </div>
+                <div class="col-md-1">
+                    <button class="btn btn-info" ng-click="vm.analyze()">解析</button>
                 </div>
             </div>
 
-            <div class="col-md-1">
-                <div class="form-group">
-                    <ui-select ng-model="vm.selectedGender"
-                               class="btn-group bootstrap-select form-control"
-                    >
-                        <ui-select-match  placeholder="性别">
-                            <span> {{$select.selected.title}}</span>
-                        </ui-select-match>
-                        <ui-select-choices
-                                repeat="item in vm.genderList"
-                        >
-                            <span ng-bind-html="item.title"></span>
-                        </ui-select-choices>
-                    </ui-select>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="input-group">
-                    <span class="input-group-addon">八字</span>
-                    <input class="form-control">
-                </div>
-            </div>
-            <div class="col-md-1">
-                <button class="btn btn-info" ng-click="">解析</button>
-            </div>
         </div>
 
     </div>
+
+    <div class="row">
+        <div class="col-md-12"
+             ba-panel
+             ba-panel-title="排盘信息"
+             ba-panel-class="with-scroll">
+
+
+            <div class="row">
+                <div class="col-xs-2">
+
+                    <h2><span class="text-danger">说明</span></h2>
+
+                </div>
+                <div class="col-xs-2">
+                    <h2>年</h2>
+                    <p>
+                        <span class="text-primary">{{vm.bazi.niangan}}</span>
+                    </p>
+                    <p>
+                        <span class="text-primary">{{vm.bazi.nianzhi}}</span>
+                    </p>
+                </div>
+                <div class="col-xs-2">
+                    <h2>月</h2>
+                    <p>
+                        <span class="text-success">{{vm.bazi.yuegan}}</span>
+                    </p>
+                    <p>
+                        <span class="text-success">{{vm.bazi.yuezhi}}</span>
+                    </p>
+                </div>
+                <div class="col-xs-2">
+                    <h2>日</h2>
+                    <p>
+                        <span class="text-info">{{vm.bazi.rigan}}</span>
+                    </p>
+                    <p>
+                        <span class="text-info">{{vm.bazi.rizhi}}</span>
+                    </p>
+                </div>
+                <div class="col-xs-2">
+                    <h2>时</h2>
+                    <p>
+                        <span class="text-warning">{{vm.bazi.shigan}}</span>
+                    </p>
+                    <p>
+                        <span class="text-warning">{{vm.bazi.shizhi}}</span>
+                    </p>
+                </div>
+                <div class="col-xs-2">
+                    <h2>胎</h2>
+                    <p>
+                        <span class="text-info">{{vm.bazi.taigan}}</span>
+                    </p>
+                    <p>
+                        <span class="text-info">{{vm.bazi.taizhi}}</span>
+                    </p>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+
+    <div class="row">
+        <div class="col-md-12"
+             ba-panel
+             ba-panel-title="岁运"
+             ba-panel-class="with-scroll">
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="input-group">
+                        <span class="input-group-addon">大运</span>
+                        <input class="form-control">
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="input-group">
+                        <span class="input-group-addon">流年</span>
+                        <input class="form-control">
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="input-group">
+                        <span class="input-group-addon">行年</span>
+                        <input class="form-control">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
 <div class="panel panel-default with-scroll">
 
     <div class="panel-body">
 
 
-
-
-        <div class="row">
-            <div class="col-xs-2">
-                <h2>性别</h2>
-                <h2><span class="text-danger">男</span></h2>
-
-            </div>
-            <div class="col-xs-2">
-              <h2>年</h2>
-              <p>
-                  <span class="text-info">{{vm.bazi.niangan}}</span>
-              </p>
-                <p>
-                    <span class="text-info">{{vm.bazi.nianzhi}}</span>
-                </p>
-            </div>
-            <div class="col-xs-2">
-                <h2>月</h2>
-                <p>
-                    <span class="text-info">{{vm.bazi.yuegan}}</span>
-                </p>
-                <p>
-                    <span class="text-info">{{vm.bazi.yuezhi}}</span>
-                </p>
-            </div>
-            <div class="col-xs-2">
-                <h2>日</h2>
-                <p>
-                    <span class="text-info">{{vm.bazi.rigan}}</span>
-                </p>
-                <p>
-                    <span class="text-info">{{vm.bazi.rizhi}}</span>
-                </p>
-            </div>
-            <div class="col-xs-2">
-                <h2>时</h2>
-                <p>
-                    <span class="text-info">{{vm.bazi.shigan}}</span>
-                </p>
-                <p>
-                    <span class="text-info">{{vm.bazi.shizhi}}</span>
-                </p>
-            </div>
-            <div class="col-xs-2">
-                <h2>胎</h2>
-                <p>
-                    <span class="text-info">{{vm.bazi.taigan}}</span>
-                </p>
-                <p>
-                    <span class="text-info">{{vm.bazi.taizhi}}</span>
-                </p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-2">
-                <div class="input-group">
-                    <span class="input-group-addon">大运</span>
-                    <input class="form-control">
-                </div>
-            </div>
-            <div class="col-md-2">
-                <div class="input-group">
-                    <span class="input-group-addon">流年</span>
-                    <input class="form-control">
-                </div>
-            </div>
-            <div class="col-md-2">
-                <div class="input-group">
-                    <span class="input-group-addon">行年</span>
-                    <input class="form-control">
-                </div>
-            </div>
-        </div>
         <div class="row">
             <uib-accordion>
                 <uib-accordion-group heading="释六十甲子性质" panel-class="panel-success bootstrap-panel accordion-panel">
