--- a/project/client/src/app/pages/customers/modify.html
+++ b/project/client/src/app/pages/customers/modify.html
@@ -51,8 +51,10 @@
 
         <div class="form-group">
             <label class="control-label">描述</label>
-            <textarea  class="form-control"  placeholder=""
-                   ng-model="vm.customer.description">
+            <textarea  class="form-control"
+                   ng-model="vm.customer.description"
+                       style="height:auto;"  rows="15"
+            >
 
             </textarea>
         </div>
