--- a/project/client/src/app/pages/rules/modify.html
+++ b/project/client/src/app/pages/rules/modify.html
@@ -25,7 +25,7 @@
 
         <div class="form-group">
             <label class="control-label">算法</label>
-            <textarea  rows="25" class="form-control"  placeholder=""
+            <textarea  rows="25" class="form-control"
                        style="height:auto;"
                    ng-model="vm.rule.algorithm">
 
