--- a/project/client/src/app/pages/customers/modify.html
+++ b/project/client/src/app/pages/customers/modify.html
@@ -42,8 +42,16 @@
         </div>
 
         <div class="form-group">
+            <label class="control-label">备注</label>
+            <input type="text" class="form-control"
+                   ng-model="vm.customer.label"
+                   >
+        </div>
+
+
+        <div class="form-group">
             <label class="control-label">生日</label>
-            <input type="text" class="form-control"  placeholder=""
+            <input type="text" class="form-control"
                    ng-model="vm.customer.birth"
 
                    >
