--- a/project/client/src/app/pages/customers/study.html
+++ b/project/client/src/app/pages/customers/study.html
@@ -55,52 +55,70 @@
             <div class="row">
                 <div class="col-xs-2">
 
-                    <h2><span class="text-danger">说明</span></h2>
 
                 </div>
                 <div class="col-xs-2">
-                    <h2>年</h2>
+                    <p>年</p>
+                    <h3>
+                        <span class="text-success">{{vm.bazi.niangan}}</span>
+                    </h3>
+                    <h3>
+                        <span class="text-success">{{vm.bazi.nianzhi}}</span>
+                    </h3>
                     <p>
-                        <span class="text-primary">{{vm.bazi.niangan}}</span>
+                        <span class="text-primary">{{vm.bazi.niannayin}}</span>
                     </p>
-                    <p>
-                        <span class="text-primary">{{vm.bazi.nianzhi}}</span>
-                    </p>
+
                 </div>
                 <div class="col-xs-2">
-                    <h2>月</h2>
-                    <p>
+                    <p>月</p>
+                    <h3>
                         <span class="text-success">{{vm.bazi.yuegan}}</span>
-                    </p>
-                    <p>
+                    </h3>
+                    <h3>
                         <span class="text-success">{{vm.bazi.yuezhi}}</span>
+                    </h3>
+
+                    <p>
+                        <span class="text-primary">{{vm.bazi.yuenayin}}</span>
                     </p>
                 </div>
                 <div class="col-xs-2">
-                    <h2>日</h2>
+                    <p>日</p>
+                    <h3>
+                        <span class="text-success">{{vm.bazi.rigan}}</span>
+                    </h3>
+                    <h3>
+                        <span class="text-success">{{vm.bazi.rizhi}}</span>
+                    </h3>
+
                     <p>
-                        <span class="text-info">{{vm.bazi.rigan}}</span>
-                    </p>
-                    <p>
-                        <span class="text-info">{{vm.bazi.rizhi}}</span>
-                    </p>
-                </div>
-                <div class="col-xs-2">
-                    <h2>时</h2>
-                    <p>
-                        <span class="text-warning">{{vm.bazi.shigan}}</span>
-                    </p>
-                    <p>
-                        <span class="text-warning">{{vm.bazi.shizhi}}</span>
+                        <span class="text-primary">{{vm.bazi.rinayin}}</span>
                     </p>
                 </div>
                 <div class="col-xs-2">
-                    <h2>胎</h2>
+                    <p>时</p>
+                    <h3>
+                        <span class="text-success">{{vm.bazi.shigan}}</span>
+                    </h3>
+                    <h3>
+                        <span class="text-success">{{vm.bazi.shizhi}}</span>
+                    </h3>
                     <p>
+                        <span class="text-primary">{{vm.bazi.shinayin}}</span>
+                    </p>
+                </div>
+                <div class="col-xs-2">
+                    <p>胎</p>
+                    <h3>
                         <span class="text-info">{{vm.bazi.taigan}}</span>
-                    </p>
-                    <p>
+                    </h3>
+                    <h3>
                         <span class="text-info">{{vm.bazi.taizhi}}</span>
+                    </h3>
+
+                    <p>
+                        <span class="text-primary">{{vm.bazi.tainayin}}</span>
                     </p>
                 </div>
             </div>
