--- a/project/client/src/app/pages/customers/index.html
+++ b/project/client/src/app/pages/customers/index.html
@@ -37,6 +37,7 @@
         <th>出生日期</th>
         <th></th>
         <th></th>
+        <th></th>
       </tr>
       </thead>
       <tbody>
@@ -60,6 +61,10 @@
 
         <td>
           {{ item.description }}
+        </td>
+
+        <td>
+          {{ item.label }}
         </td>
 
         <td>
