--- a/project/client/src/app/pages/customers/study.html
+++ b/project/client/src/app/pages/customers/study.html
@@ -33,7 +33,7 @@
                 <div class="col-md-4">
                     <div class="input-group">
                         <span class="input-group-addon">八字</span>
-                        <input class="form-control"  ng-model="vm.customer.bazi">
+                        <input class="form-control"  ng-model="vm.strBaZi">
                     </div>
                 </div>
                 <div class="col-md-1">
@@ -60,52 +60,52 @@
                 <div class="col-xs-2">
                     <p>年</p>
                     <h3>
-                        <span class="text-success">{{vm.bazi.niangan}}</span>
+                        <span class="text-success">{{vm.niangan}}</span>
                     </h3>
                     <h3>
-                        <span class="text-success">{{vm.bazi.nianzhi}}</span>
+                        <span class="text-success">{{vm.nianzhi}}</span>
                     </h3>
                     <p>
-                        <span class="text-primary">{{vm.bazi.niannayin}}</span>
+                        <span class="text-primary">{{vm.niannayin}}</span>
                     </p>
 
                 </div>
                 <div class="col-xs-2">
                     <p>月</p>
                     <h3>
-                        <span class="text-success">{{vm.bazi.yuegan}}</span>
+                        <span class="text-success">{{vm.yuegan}}</span>
                     </h3>
                     <h3>
-                        <span class="text-success">{{vm.bazi.yuezhi}}</span>
+                        <span class="text-success">{{vm.yuezhi}}</span>
                     </h3>
 
                     <p>
-                        <span class="text-primary">{{vm.bazi.yuenayin}}</span>
+                        <span class="text-primary">{{vm.yuenayin}}</span>
                     </p>
                 </div>
                 <div class="col-xs-2">
                     <p>日</p>
                     <h3>
-                        <span class="text-success">{{vm.bazi.rigan}}</span>
+                        <span class="text-success">{{vm.rigan}}</span>
                     </h3>
                     <h3>
-                        <span class="text-success">{{vm.bazi.rizhi}}</span>
+                        <span class="text-success">{{vm.rizhi}}</span>
                     </h3>
 
                     <p>
-                        <span class="text-primary">{{vm.bazi.rinayin}}</span>
+                        <span class="text-primary">{{vm.rinayin}}</span>
                     </p>
                 </div>
                 <div class="col-xs-2">
                     <p>时</p>
                     <h3>
-                        <span class="text-success">{{vm.bazi.shigan}}</span>
+                        <span class="text-success">{{vm.shigan}}</span>
                     </h3>
                     <h3>
-                        <span class="text-success">{{vm.bazi.shizhi}}</span>
+                        <span class="text-success">{{vm.shizhi}}</span>
                     </h3>
                     <p>
-                        <span class="text-primary">{{vm.bazi.shinayin}}</span>
+                        <span class="text-primary">{{vm.shinayin}}</span>
                     </p>
                 </div>
                 <div class="col-xs-2">
@@ -136,19 +136,19 @@
                 <div class="col-md-3">
                     <div class="input-group">
                         <span class="input-group-addon">大运</span>
-                        <input class="form-control">
+                        <input class="form-control" ng-model="vm.bazi.dayun">
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="input-group">
                         <span class="input-group-addon">流年</span>
-                        <input class="form-control">
+                        <input class="form-control"  ng-model="vm.bazi.liunian">
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="input-group">
                         <span class="input-group-addon">行年</span>
-                        <input class="form-control">
+                        <input class="form-control"  ng-model="vm.bazi.xingnian">
                     </div>
                 </div>
             </div>
@@ -160,27 +160,59 @@
 
     <div class="panel-body">
 
+        <div class="row">
+            <uib-tabset active="$tabSetStatus.activeTab">
+                <uib-tab heading="分析结果">
+                    <div class="row">
+                        <div json-viewer="vm.analyzeResult"></div>
+                    </div>
+
+                </uib-tab>
+                <uib-tab heading="Getting Done">
+                    <p>
+                        You can't connect the dots looking forward; you can only connect them looking backwards. So you have to trust that
+                        the dots will somehow connect in your future. You have to trust in something--your gut, destiny, life, karma,
+                        whatever. This approach has never let me down, and it has made all the difference in my life.
+                    </p>
+
+                    <p>
+                        The reason most people never reach their goals is that they don't define them, or ever seriously consider them as
+                        believable or achievable. Winners can tell you where they are going, what they plan to do along the way, and who
+                        will be sharing the adventure with them.
+                    </p>
+                </uib-tab>
+                <uib-tab ng-init="$dropdownTabActive = 1" class="with-dropdown">
+                    <uib-tab-heading uib-dropdown>
+                        <a uib-dropdown-toggle ng-click="$event.stopPropagation()">
+                            Dropdown tab <i class="caret"></i>
+                        </a>
+                        <ul class="dropdown-menu" uib-dropdown-menu>
+                            <li><a ng-click="$dropdownTabActive = 1; $tabSetStatus.activeTab = 3">Tab 1</a></li>
+                            <li><a ng-click="$dropdownTabActive = 2; $tabSetStatus.activeTab = 3">Tab 2</a></li>
+                        </ul>
+                    </uib-tab-heading>
+                    <div ng-show="$dropdownTabActive == 1">
+                        <p>
+                            Success is ... knowing your purpose in life, growing to reach your maximum potential, and sowing seeds that
+                            benefit others.
+                        </p>
+
+                        <p>Failure is the condiment that gives success its flavor.</p>
+                    </div>
+                    <div ng-show="$dropdownTabActive == 2">
+                        <p class="text-center">
+                            <button class="btn btn-danger">I'm just a dummy button</button>
+                        </p>
+                    </div>
+                </uib-tab>
+            </uib-tabset>
+        </div>
 
         <div class="row">
             <uib-accordion>
-                <uib-accordion-group heading="释六十甲子性质" panel-class="panel-success bootstrap-panel accordion-panel">
-                    <div class="row">
-                        <div class="col-md-3">
-                            <div class="input-group">
-                                <span class="input-group-addon" ></span>
-                                <input  class="form-control"
-                                        ng-model="vm.jiaziinfo"
-                                >
-                            </div>
-                        </div>
-                        <div class="col-md-2">
-                            <button class="btn btn-info" ng-click="vm.getJiaziShuxing()">计算</button>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div json-viewer="vm.resultJiazi"></div>
+                <uib-accordion-group heading="分析结果" panel-class="panel-success bootstrap-panel accordion-panel">
 
-                    </div>
+
                 </uib-accordion-group>
                 <uib-accordion-group heading="行年-传统算法" panel-class="panel-primary bootstrap-panel accordion-panel">
                     <div class="row">
