--- a/project/client/src/app/pages/customers/modify.html
+++ b/project/client/src/app/pages/customers/modify.html
@@ -1,110 +1,80 @@
+<div ba-panel ba-panel-title="客户信息" ba-panel-class="with-scroll panel-info">
+    <form novalidate name="validateForm" w5c-form-validate>
 
+        <div class="row">
 
-<div
-        ba-panel
-        ba-panel-title="客户信息"
-        ba-panel-class="with-scroll panel-info"
->
-    <form novalidate name="validateForm" w5c-form-validate >
-
-    <div class="row">
-
-        <div class="form-group">
-            <label class="control-label">姓名</label>
-            <input type="text" class="form-control"  placeholder=""
-                   ng-model="vm.customer.name"
-                   name="commonName"
-                   required>
-        </div>
-
-        <div class="form-group">
-            <label >性别</label>
-            <ui-select ng-model="vm.selectedGender"
-                       class="btn-group bootstrap-select form-control"
-            >
-                <ui-select-match  >
-                    <span> {{$select.selected.title}}</span>
-                </ui-select-match>
-                <ui-select-choices
-                        repeat="item in vm.genderList"
-                >
-                    <span ng-bind-html="item.title"></span>
-                </ui-select-choices>
-            </ui-select>
-        </div>
-
-        <div class="form-group">
-            <label class="control-label">八字</label>
-            <input type="text" class="form-control"  placeholder=""
-                   ng-model="vm.customer.bazi"
-                   name="commonName"
-                   required>
-        </div>
-
-        <div class="form-group">
-            <label class="control-label">备注</label>
-            <input type="text" class="form-control"
-                   ng-model="vm.customer.label"
-                   >
-        </div>
-
-
-        <div class="form-group">
-            <label class="control-label">生日</label>
-            <input type="text" class="form-control"
-                   ng-model="vm.customer.birth"
-
-                   >
-        </div>
-
-        <div class="form-group">
-            <label class="control-label">描述</label>
-            <textarea  class="form-control"
-                   ng-model="vm.customer.description"
-                       style="height:auto;"  rows="15"
-            >
-
-            </textarea>
-        </div>
-
-        <div class="form-group">
-
-
-            <div ng-if="vm.id===0">
-                <button class="btn btn-primary" ng-click="vm.analyze()">
-                    分析已知因
-                </button>
-                <button class="btn btn-primary"
-                        ng-disabled="validateForm.$invalid"
-                        ng-click="vm.add()"
-                >
-                    新增并继续
-                </button>
-
-                <button class="btn btn-default"
-                        type="submit"
-                        ng-disabled="validateForm.$invalid"
-                        ng-click="vm.add(true)">新增
-                </button>
-                <button class="btn btn-default" ng-click="vm.back()">
-                    返回
-                </button>
-
+            <div class="form-group">
+                <label class="control-label">姓名</label>
+                <input type="text" class="form-control" placeholder="" ng-model="vm.customer.name" name="commonName" required>
             </div>
-            <div ng-if="vm.id>0">
-                <button class="btn btn-primary" ng-click="vm.analyze()">
-                    分析已知因
-                </button>
-                <button class="btn btn-primary"
-                        ng-disabled="validateForm.$invalid"
-                        ng-click="vm.save()">保存</button>
-                <button class="btn btn-default" ng-click="vm.back()">
-                    返回
-                </button>
-            </div>
-        </div>
 
-    </div>
+            <div class="form-group">
+                <label>性别</label>
+                <ui-select ng-model="vm.selectedGender" class="btn-group bootstrap-select form-control">
+                    <ui-select-match>
+                        <span> {{$select.selected.title}}</span>
+                    </ui-select-match>
+                    <ui-select-choices repeat="item in vm.genderList">
+                        <span ng-bind-html="item.title"></span>
+                    </ui-select-choices>
+                </ui-select>
+            </div>
+            <div class="form-group">
+                <label class="control-label">生日</label>
+                <input type="text" class="form-control" ng-model="vm.customer.birth">
+            </div>
+
+            <div class="form-group">
+                <label class="control-label">备注</label>
+                <input type="text" class="form-control" ng-model="vm.customer.label">
+            </div>
+
+            <div class="form-group">
+                <label class="control-label">八字</label>
+                <input type="text" class="form-control" placeholder="" ng-model="vm.customer.bazi" name="commonName" required>
+            </div>
+
+
+
+
+
+            <div class="form-group">
+                <label class="control-label">描述</label>
+                <textarea class="form-control" ng-model="vm.customer.description" style="height:auto;" rows="15">
+
+                </textarea>
+            </div>
+
+            <div class="form-group">
+
+
+                <div ng-if="vm.id===0">
+                    <button class="btn btn-primary" ng-click="vm.analyze()">
+                        分析已知因
+                    </button>
+                    <button class="btn btn-primary" ng-disabled="validateForm.$invalid" ng-click="vm.add()">
+                        新增并继续
+                    </button>
+
+                    <button class="btn btn-default" type="submit" ng-disabled="validateForm.$invalid" ng-click="vm.add(true)">新增
+                    </button>
+                    <button class="btn btn-default" ng-click="vm.back()">
+                        返回
+                    </button>
+
+                </div>
+                <div ng-if="vm.id>0">
+                    <button class="btn btn-primary" ng-click="vm.analyze()">
+                        分析已知因
+                    </button>
+                    <button class="btn btn-primary" ng-disabled="validateForm.$invalid" ng-click="vm.save()">保存</button>
+                    <button class="btn btn-default" ng-click="vm.back()">
+                        返回
+                    </button>
+                </div>
+            </div>
+
+        </div>
 
     </form>
 
@@ -113,6 +83,3 @@
 
     </div>
 </div>
-
-
-
